# python-samples

./: .gitignore  AGENTS.md  pyproject.toml
.github/workflows/: pylint.yml
with-chatgpt/: mp4tomp3.py  pyproject.toml  straching-routine.py  tetris.py
