[project]
name = "with-chatgpt"
version = "0.1.0"
description = ""
authors = [
    {name = "kenux196",email = "kenux.yun@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fpdf (>=1.7.2,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
